--- a/style.css
+++ b/style.css
@@ -14,10 +14,11 @@ body{
 
 main{
     background-color: #fff;
-    width: 300px;
-
-    margin-top: 20px;
-    margin: 30px auto;
+    width: 350px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     border-radius: 10px;
 
 }
