--- a/style.css
+++ b/style.css
@@ -1,101 +1,42 @@
 @charset "UTF-8";
 
-
 *{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-body{
-    background-color: #6b2d2d;
+html, body{
+    
+    width: 100vw;
+    height: 100vh;
+    background-color: #4d1616;
 }
 
 main{
-    background-color: #fff;
-    width: 300px;
-    border-radius: 10px;
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+}
 
-
-
-
+#container{
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    
-}
 
-img{
-    width: 100%;
-    border-radius: 10px 10px 0 0;
-}
-
-#container{
-    padding: 5px;
-}
-
-#container > h1{
-    text-align: center;
-}
-
-p{
-    margin: 10px;
-    display: flex;
-}
-p#usuario{
-    background-color: #6b2d2d;
-    border-radius: 5px;
-    
-}
-p#senha{
-    background-color: #6b2d2d;
-    border-radius: 5px;
-    
-}
-
-span#icon{
-    font-size: 2em;
-    color: #fff;
-    padding: 5px;
-
-}
-
-input{
-    width: 100%;
-    padding: 10px;
-    border-radius: 5px;
-}
-
-button{
-    width: 100%;
-    cursor: pointer;
-    padding: 10px;
-    border-radius: 5px;
-
-}
-
-button#entrar{
-    background-color: #6b2d2d;
-    color: #fff;
-
-}
-
-button#entrar:hover{
-    background-color: #4e2020;
-    color: #fff;
-
-}
-
-button#esqueci{
     background-color: #fff;
-    border: 1px solid rgb(206, 206, 206);
-
+    height: 500px;
+    width: 250px;
+    border-radius: 5px;
+    overflow: hidden;
 }
 
-button#esqueci:hover{
-    background-color: #4e2020;
-    color: #fff;
-
+div#imagem{
+    background: #800000 url(imgs/entrada.jpg) no-repeat;
+    background-size: cover;
+    background-position: center top;
+    height: 200px;
+    
 }
